# auto_grasp

./: CMakeLists.txt  README.md  package.xml  requirements.txt
cfg/: SphericalGrasp.cfg
launch/: expose_rotated_images.launch  image_rotator.launch
msg/: CurrentState.msg  Entity_msg.msg
scripts/: .object_localiser.py.swp  2  behaviour_helpers.py  create_cuboid.py  detectnet_switcher.py  kinova_gen3.py  moving_planner.py  object_localiser.py  planner.py  spot_mover.py  track_spot_stream.py  world.py
src/: .get_pointcloud.py.swp  click.py  expose_rotated_images.py  get_pointcloud.py  object_localiser.py  plan_pick.py  planner_rodrigo.py  pub_depth_and_img.py  rotate_spot_images.py  spherical_grasps_server.py  to_grayscale.py
srv/: AddFloorPlane.srv  RemoveFloorPlane.srv
