<?xml version="1.0"?>
<package format="2">
  <name>auto_grasp</name>
  <version>0.0.1</version>
  <description>Library with motion planning scripts for automatic grasping</description>

  <maintainer email="armanfidanoglu@gmail.com">Arman Fidanoglu</maintainer>
  <author email="armanfidanoglu@gmail.com">Arman Fidanoglu</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
